--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
     "@material-ui/core": "^4.12.4",
+    "@mui/material": "^5.10.17",
     "@react-icons/all-files": "^4.1.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -56,6 +59,7 @@
     "@types/react-transition-group": "^4.4.5",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.19",
+    "react-multi-carousel": "^2.8.2",
     "tailwindcss": "^3.2.4"
   }
 }
