--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "dependencies": {
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "@headlessui/react": "^1.7.7",
+    "@heroicons/react": "^2.0.13",
     "@material-ui/core": "^4.12.4",
     "@mui/material": "^5.10.17",
     "@react-icons/all-files": "^4.1.0",
