--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.40.0",
     "react-icons": "^4.7.1",
+    "react-neshan-map-leaflet": "^1.2.1",
     "react-persian": "^1.1.1",
     "react-redux": "^8.0.5",
     "react-router-dom": "^5.2.0",
