Change Chart and complete them

--- a/package.json
+++ b/package.json
@@ -22,11 +22,14 @@
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
     "axios": "^1.2.0",
+    "chart.js": "^4.2.0",
     "devextreme": "22.2.3",
     "devextreme-react": "22.2.3",
+    "faker": "^6.6.6",
     "font-awesome": "^4.7.0",
     "google-map-react": "^2.2.0",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.40.0",
     "react-icons": "^4.7.1",
