--- a/package.json
+++ b/package.json
@@ -4,6 +4,18 @@
   "private": true,
   "homepage": "https://erfan-nourbakhsh.ir",
   "dependencies": {
+    "workbox-background-sync": "^6.5.4",
+    "workbox-broadcast-update": "^6.5.4",
+    "workbox-cacheable-response": "^6.5.4",
+    "workbox-core": "^6.5.4",
+    "workbox-expiration": "^6.5.4",
+    "workbox-google-analytics": "^6.5.4",
+    "workbox-navigation-preload": "^6.5.4",
+    "workbox-precaching": "^6.5.4",
+    "workbox-range-requests": "^6.5.4",
+    "workbox-routing": "^6.5.4",
+    "workbox-strategies": "^6.5.4",
+    "workbox-streams": "^6.5.4",
     "@devexpress/dx-react-chart": "^4.0.1",
     "@devexpress/dx-react-chart-material-ui": "^4.0.1",
     "@devexpress/dx-react-core": "^4.0.1",
